codex-rs/tui/src/bottom_pane/tests/snapshots/codex_tui__bottom_pane__tests__actionable_banner_tests__persistent_status_banner_without_description.snap
---
source: tui/src/bottom_pane/tests/actionable_banner_tests.rs
expression: snapshot
---

  Usage limit reached

• Working (0s • esc to interrupt)


› Ask Codex to do anything

  ? for shortcuts                                  100% context left
