codex-rs/tui/src/bottom_pane/tests/snapshots/codex_tui__bottom_pane__tests__actionable_banner_tests__running_banner_remapped_keys.snap
---
source: tui/src/bottom_pane/tests/actionable_banner_tests.rs
expression: rendered
---
                                                                                
  Usage limit reached                                                           
                                                                                
› 1. First                                                                      
  2. Keep waiting                                                               
                                                                                
  Press a number to choose · ↑ to move up · f2 to move down · f3 to select      
• Working (0s • esc to interrupt)                                               
                                                                                
                                                                                
› Ask Codex to do anything                                                      
                                                                                
  ? for shortcuts                                            100% context left
